--- a/monitor/src/components/ui-preview/form-input/index.module.css
+++ b/monitor/src/components/ui-preview/form-input/index.module.css
@@ -2,7 +2,7 @@
     background: var(--ba-ui-bg-panel);
     border: var(--border-size-1) solid var(--ba-ui-bg-float);
     border-radius: var(--radius-1);
-    padding: var(--size-2) var(--size-2);
+    padding: var(--size-2) var(--size-3);
     font-size: var(--font-size-0);
     color: var(--ba-ui-fg-default);
     outline: none;
